# HeliOS

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  gpd.dsdt.aml  gpd.dsdt.dsl  gpd.ssdt.dsl  qemu.dsdt.dsl  virtualbox.dsdt.aml  virtualbox.ssdt.dsl  vmware.dsdt.aml  vmware.dsdt.dsl
kernel/: Cargo.toml  Makefile  rust-toolchain.toml  target.json
kernel/.cargo/: config.toml
kernel/acpi_machine_language/: Cargo.toml
kernel/acpi_machine_language/src/: lib.rs
kernel/repr_packed_struct/: Cargo.toml
kernel/repr_packed_struct/src/: lib.rs
kernel/src/: acpi.rs  allocator.rs  argument.rs  efi.rs  elf.rs  interrupt.rs  io.rs  main.rs  memory.rs  pci.rs  processor.rs  rs232c.rs  sync.rs  syscall.rs  task.rs  timer.rs  x64.rs
kernel/src/acpi/: boot_graphics_resource.rs  debug_port.rs  differentiated_system_description.rs  direct_memory_access_remapping.rs  extended_system_description.rs  firmware_acpi_control.rs  firmware_performance_data.rs  fixed_acpi_description.rs  generic_address.rs  high_precision_event_timer.rs  low_power_idle.rs  machine_language.rs  memory_mapped_configuration.rs  multiple_apic_description.rs  root_system_description.rs  rsdp.rs  secondary_system_description.rs  static_resource_affinity.rs  system_description.rs  trusted_platform_module.rs  watchdog_action.rs  windows_acpi_emulated_devices.rs  windows_smm_security_mitigations.rs
kernel/src/application_processor/: boot.rs
kernel/src/efi/: boot_services.rs  char16.rs  char8.rs  configuration.rs  event.rs  guid.rs  handle.rs  hii.rs  memory.rs  protocol.rs  runtime_services.rs  time.rs  (+3 more)
(+803 files in other folders)
