workspace = { members = ["acpi_machine_language"] }
[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acpi_machine_language = { path = "acpi_machine_language" }
bitfield-struct = "0.5"
naked-function = "0.1.5"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

