[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield-struct = "0.5"
naked-function = "0.1.5"

[dependencies.acpi_machine_language]
path = "acpi_machine_language"

[dependencies.repr_packed_struct]
path = "repr_packed_struct"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace]
members = [
	"acpi_machine_language",
	"repr_packed_struct"
]

