[package]
name = "acpi_machine_language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.73"
syn = { version = "2.0.44", features = ["extra-traits"] }
quote = "1.0.34"

[lib]
proc-macro = true

